fix cc image overlapping guidelines. Resolves #1

--- a/css/stealourcontent.css
+++ b/css/stealourcontent.css
@@ -31,13 +31,14 @@ a.soc_button:hover {
   width: 80%;
   height: 400px;
 }
+
 #soc_modal_wrapper #soc_license {
-  position: absolute;
-  right: 10px;
-  top: 10px;
+  float: right;
 }
+
 #soc_modal_wrapper #soc_license img {
   width: 100px;
+  padding-left: 6px;
 }
 #modalContent a.close img {
   margin-left: 10px;
